--- a/Cotizacion/Admin/styleCotizacion.css
+++ b/Cotizacion/Admin/styleCotizacion.css
@@ -80,7 +80,7 @@ body {
 #msform input,
 #msform textarea {
     padding: 15px;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     border-radius: 0px;
     margin-bottom: 10px;
     width: 100%;
